Fixed flex display on IE

--- a/src/main/js/app/app.css
+++ b/src/main/js/app/app.css
@@ -1,14 +1,16 @@
 .main-row {
-    width: 80%;
     display: table;
+    width: 80%;
     margin: 0 auto;
 }
 
 .header {
-    width: 100%;
     display: flex;
     flex-flow: row wrap;
+    flex: 0 1 auto;
+    flex-basis: 100%;
     align-items: center;
+    width: 100%;
 }
 
 .header-title {
@@ -20,6 +22,9 @@
 
 .header-title > div {
     display: flex;
+    flex-flow: row wrap;
+    flex: 0 1 auto;
+    flex-basis: 100%;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -29,15 +34,19 @@
 }
 
 .header-body {
+    height: 100%;
     margin-top: 10px;
     margin-bottom: 35px;
 }
 
 .header-body > div {
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row wrap;
+    flex: 0 1 auto;
+    flex-basis: 100%;
     align-items: flex-start;
     width: 100%;
+    height: 100%;
     padding-left: 20px;
 }
 
